<resources>
    <string name="app_name">手机通讯录</string>
    <string name="contact">联系人</string>
    <string name="search_contacts">搜索联系人</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="remark">备注</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="add_contact">添加联系人</string>
    <string name="edit_information">修改信息</string>
    <string name="delete_contact">删除联系人</string>
    <string name="commit_edit">提交修改</string>
</resources>