<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".activity.UpdateActivity">

    <!-- 顶部工具栏 -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/update_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/back"
        app:title="手机通讯录"
        app:titleTextColor="#6A6A6A" />

    <!-- 表单布局，包含姓名、电话、备注编辑框和性别单选按钮组 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_toolbar"
        android:orientation="vertical">

        <!-- 姓名编辑框 -->
        <EditText
            android:id="@+id/update_name"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:hint="@string/name"
            android:minHeight="48dp"
            android:padding="9dp"
            tools:ignore="Autofill,TextFields" />

        <!-- 电话编辑框 -->
        <EditText
            android:id="@+id/update_phone"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:hint="@string/phone"
            android:minHeight="48dp"
            android:padding="9dp"
            tools:ignore="Autofill,TextFields" />

        <!-- 备注编辑框 -->
        <EditText
            android:id="@+id/update_remark"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:hint="@string/remark"
            android:minHeight="48dp"
            android:padding="9dp"
            tools:ignore="Autofill,TextFields" />

        <!-- 性别选择按钮组 -->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- 男性单选按钮 -->
            <RadioButton
                android:id="@+id/update_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:text="@string/male" />

            <!-- 女性单选按钮 -->
            <RadioButton
                android:id="@+id/update_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:text="@string/female" />
        </RadioGroup>

        <!-- 提交按钮 -->
        <Button
            android:id="@+id/update_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/commit_edit"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>