<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DetailsActivity">

    <!-- 顶部工具栏 -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/back"
        app:title="@string/app_name"
        app:titleTextColor="#6A6A6A" />

    <!-- 联系人头像 -->
    <ImageView
        android:id="@+id/details_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/female"
        tools:ignore="ContentDescription" />

    <!-- 联系人姓名 -->
    <TextView
        android:id="@+id/details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="32sp"
        android:textStyle="bold" />

    <!-- 分隔线 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="#CCCCCC" />

    <!-- 联系人电话 -->
    <TextView
        android:id="@+id/details_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- 电话和短信按钮 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="-55dp"
        android:gravity="end">

        <Button
            android:id="@+id/details_phone_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/details_phone"
            android:foreground="?selectableItemBackground"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/details_message_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/details_message"
            android:foreground="?selectableItemBackground"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

    <!-- 联系人备注 -->
    <TextView
        android:id="@+id/details_remark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- 分隔线 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="#CCCCCC" />

    <!-- 修改信息按钮 -->
    <Button
        android:id="@+id/details_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text="@string/edit_information"
        android:textColor="#1295D9"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- 删除联系人按钮 -->
    <Button
        android:id="@+id/details_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text="@string/delete_contact"
        android:textColor="#F44336"
        android:textSize="25sp"
        android:textStyle="bold" />
</LinearLayout>